12 Dec 2007 - 2.5.0-rc1
-----------------------

 * Added IS_NEW and IS_EXPIRED built-in collection variables.

 * Added SecMarker <id> directive to allow a fixed target for skipAfter.

 * The invoked rule is now logged in the debug log at level 5.

 * New audit log part 'K' logs all matching rules.

 * Implemented SecRequestBodyNoFilesLimit.

 * Enhance handling of the case where we run out of disk space while
   writing to audit log entry.

 * Renamed SecGeoLookupsDb to SecGeoLookupDB.

 * Implement SecComponentSignature.

 * Fix warnings on Solaris and/or 64bit builds.

 * Added skipAfter:<id> action to allow skipping all rules until a rule
   with a specified ID is reached.  Rule execution then continues after
   the specified rule.

 * Added ctl:ruleRemoveById action to allow rule removal on a match.

 * Added a @containsWord operator that will match a given string anywhere in
   the target value, but only on word boundaries.

 * New MATCHED_VAR variable to store the last matched variable name
   so that it can be more easily used by rules.

 * Fixed expansion of macros when using relative changes with setvar.  In
   addition, added support for expanding macros in the variable name.

 * Situations where ModSecurity will intercept, generate an error or log
   a level 1-3 message to the debug log are now marked as 'relevant' and may
   generate an audit log entry.

 * Do not process subrequests in phase 2-4, but do hand off the request data.

 * Fixed deprecatevar:var=N/S action so that it decrements N every S seconds
   as documented instead of decrementing by a rate.

 * Enable ModSecurity to look at partial response bodies. In previous
   versions ModSecurity would respond with status code 500 when the
   response body was too long. Now, if SecResponseBodyLimitAction is
   set to "ProcessPartial", it will process the part of the response
   body received up until that point but send the rest without buffering.
