@@ -3369,6 +3369,16 @@ SecRule <emphasis>XML:/xq:employees/employee/name/text()</emphasis> Fred \
     </section>
 
     <section>
+      <title><literal>jsDecodeUni</literal></title>
+
+      <para>Decodes <literal moreinfo="none">\uXXXX</literal> JavaScript
+      encoding. If the code is in the range of FF01-FF5E (the full width ASCII
+      codes), then the higher byte is used to detect and adjust the lower
+      byte. Otherwise, only the lower byte will be used and the higher byte
+      zeroed.</para>
+    </section>
+
+    <section>
       <title><literal>length</literal></title>
 
       <para>This function converts the input to its numeric length (count of
